--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;font-family:arial;color:white}
 
+h1{color:grey;font-family:verdana}
+
+.maindiv {
+    background-color: #ffffff;
+    color: #000000;
+    width: 500px;
+    padding: 20px;
+    border-radius: 25px;
+    align: center;
+    margin: auto
+}
+
+.seconddiv {
+    text-align: left;
+    margin-left: 100px;
+}
 
